Bug 289217 LOGFONT's pixel sizes not getting converted to twips accurately thus displaying noninteger font sizes in DOM Inspector r=ere sr=roc a=dbaron